gap fix

--- a/style.scss
+++ b/style.scss
@@ -511,7 +511,7 @@ body {
             flex-direction: column;
             justify-content: space-between;
             padding: 1.04vw;
-            width: 23.82vw;
+            width: 23.52vw;
             min-width: 303px;
             height: auto;
             min-height: 24.6vw;
